# ConsolePreAlloc

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: XSEPlugin.cmake
src/: PCH.hpp  xSEPlugin.cpp
src/Hooks/: HookUtil.hpp
src/Hooks/Detours/: detours.cpp  detver.hpp  image.cpp  modules.cpp
src/Util/: Util.hpp
src/Util/Windows/: Console.hpp  MessageBox.hpp
